test/errors/array_index_invalid_type.sl
# expect: COMPERROR
fixed[] a = [1];
print(a["0"]);
